Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,10 +1,9 @@
 <li>"Fender"</li>
 <li>"Gibson"</li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>"ESP"</li>
+<li>"Ibanez"</li>
+<li>"Martin"</li>
 
-"ESP"
-"Ibanez"
-"Martin"
+
+
+
